Add Connect Worker
